[package]
name = "svrhx"
version = "0.1.0"
authors = ["eviltobz <eviltobz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
confy = "0.4.0"
directories = "3.0"
notify = "4.0.15"
serde = { version = "1.0.114", features = ["derive"] }
structopt = "0.3.15"